--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install:
 - go get github.com/mattn/goveralls
 - go get -t ./...
 script:
-- go test -v -covermode=count -coverprofile=coverage.out
+- go test -v -covermode=count -coverprofile=coverage.out ./...
 - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
 env:
   global:
